--- a/Demo/Knockout.Extensions.Demo.Web/Views/BindingsDemo/Index.cshtml
+++ b/Demo/Knockout.Extensions.Demo.Web/Views/BindingsDemo/Index.cshtml
@@ -3,7 +3,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <link href="/Content/DataTables-1.8.2/media/css/demo_table_jui.css" rel="stylesheet" type="text/css" />
-
+<script src="@Url.Content("~/Scripts/DataTables-1.8.2/media/js/jquery.dataTables.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/cog.knockout.bindings.dataTables.js")" type="text/javascript"></script>
 <style type="text/css">
 
 .sample
@@ -41,12 +42,12 @@
 </style>
 <script type="text/javascript">
 
-    function Record(id, column1, column2, column3)
+    function Record(Id, Column1, Column2, Column3)
     {
-        this.id = id;
-        this.column1 = ko.observable(column1);
-        this.column2 = ko.observable(column2);
-        this.column3 = ko.observable(column3);
+        this.Id = Id;
+        this.Column1 = ko.observable(Column1);
+        this.Column2 = ko.observable(Column2);
+        this.Column3 = ko.observable(Column3);
     }
 
     function ViewModel()
@@ -60,6 +61,19 @@
                     CreateRecord(),
                     CreateRecord()
                 ]);
+
+        this.getData = function (options, callback) {
+            $.ajax({
+                url: '/BindingsDemo/GetData',
+                data: ko.toJSON(options),
+                type: "POST",
+                contentType: "application/json charset=utf-8",
+                dataType: "json",
+                success: function (responseData, textStatus, jqXHR) {
+                    callback(responseData);
+                }
+            });
+        }
 
         this.json = ko.dependentObservable(function ()
         {
@@ -80,7 +94,7 @@
         {
             // Issue: Why is the instance of 'item' not exist in the data array?  Does datatables do something to the objects?
             //            this.data.remove(item);
-            this.data.remove(function (item2) { return item.id == item2.id; });
+            this.data.remove(function (item2) { return item.Id == item2.Id; });
         }
 
         function CreateRecord()
@@ -90,20 +104,17 @@
     };
 
 </script>
-
-<script src="@Url.Content("~/Scripts/DataTables-1.8.2/media/js/jquery.dataTables.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/cog.knockout.bindings.dataTables.js")" type="text/javascript"></script>
 <h1>Data Tables Bindings</h1>
 
 <!-- Sample 1: Basic Data Table -->
-<div id="sample1" class="sample">
+<div Id="sample1" class="sample">
     <h1>Sample1: Basic Data Table</h1>
     <p class="description">Demonstrates a basic data table using an knockout observable array as a data source.</p>
     <div class="table">
         <a data-bind="click: addItem">Add</a>
         <a data-bind="click: removeLastItem">Remove</a>
         <br /><br />
-        <table data-bind="dataTable: { dataSource: data, columns: ['column1', 'column2', 'column3'] }">
+        <table data-bind="dataTable: { dataSource: data, columns: ['Column1', 'Column2', 'Column3'] }">
             <thead>
                 <tr>
                     <td>Column 1</td>
@@ -118,8 +129,6 @@
     </div>
     <h2>View Model</h2>
     <div data-bind="text: json"></div>
-
-    
 </div>
 <script type="text/javascript">
 
@@ -132,15 +141,14 @@
 
 </script>
 
-
 <!-- Sample 2: Editable Data Table with Row Template -->
-<div id="sample2" class="sample">
+<div Id="sample2" class="sample">
     <h1> Sample 2: Editable Data Table with Row Template</h1>
     <p class="description">Demonstrates a simple table using an knockout observable array as a data source.</p>
     <div class="table">
         <a data-bind="click: addItem">Add</a>
         <br /><br />
-        <table data-bind="dataTable: { dataSource: data, rowTemplate: 'sample2RowTemplate', columns: ['column1', 'column2', 'column3'] }">
+        <table data-bind="dataTable: { dataSource: data, rowTemplate: 'sample2RowTemplate', columns: ['Column1', 'Column2', 'Column3'] }">
             <thead>
                 <tr>
                     <td>Column 1</td>
@@ -155,10 +163,10 @@
     <h2>View Model</h2>
     <div data-bind="text: json"></div>
 </div>
-<script id="sample2RowTemplate" type="text/html">
-    <td><input type="text" data-bind="value: column1" /></td>
-    <td><input type="text" data-bind="value: column2" /></td>
-    <td><input type="text" data-bind="value: column3" /></td>
+<script Id="sample2RowTemplate" type="text/html">
+    <td><input type="text" data-bind="value: Column1" /></td>
+    <td><input type="text" data-bind="value: Column2" /></td>
+    <td><input type="text" data-bind="value: Column3" /></td>
     <td><a data-bind="click: function() { vm2.removeItem($data); }">Remove</a></td>
 </script>
 <script type="text/javascript">
@@ -167,8 +175,44 @@
 
     $(function ()
     {
-        
         ko.applyBindings(vm2, $("#sample2")[0]);
+    });
+
+</script>
+
+
+<!-- Sample 2: Editable Data Table with Row Template -->
+<div Id="sample3" class="sample">
+    <h1> Sample 3: Editable Data Table with Row Template and AJAX data source</h1>
+    <p class="description">Demonstrates a simple table using an knockout observable array as a data source.</p>
+    <div class="table">
+        <a data-bind="click: addItem">Add</a>
+        <br /><br />
+        <table data-bind="dataTable: { dataSource: getData, rowTemplate: 'sample3RowTemplate', columns: ['Column1', 'Column2', 'Column3'] }">
+            <thead>
+                <tr>
+                    <td>Column 1</td>
+                    <td>Column 2</td>
+                    <td>Column 3</td>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
+</div>
+<script Id="sample3RowTemplate" type="text/html">
+    <td><input type="text" data-bind="value: Column1" /></td>
+    <td><input type="text" data-bind="value: Column2" /></td>
+    <td><input type="text" data-bind="value: Column3" /></td>
+    <td><a data-bind="click: function() { vm2.removeItem($data); }">Remove</a></td>
+</script>
+<script type="text/javascript">
+
+    var vm3 = new ViewModel();
+
+    $(function () {
+        ko.applyBindings(vm3, $("#sample3")[0]);
     });
 
 </script>
@@ -177,7 +221,7 @@
 
 @*
 <h3>Defined Row Template</h3>
-<table data-bind="dataTable: { rowTemplate: 'rowTemplate', dataSource: tableRecords, columns: ['column1', 'column2', 'column3'], options: tableOptions }">
+<table data-bind="dataTable: { rowTemplate: 'rowTemplate', dataSource: tableRecords, columns: ['Column1', 'Column2', 'Column3'], options: tableOptions }">
     <thead>
         <tr>
             <td>Column 1</td>
@@ -196,6 +240,7 @@
     <script src="/Scripts/jquery-1.5.1.min.js" type="text/javascript"></script>
     <script src="/Scripts/modernizr-1.7.min.js" type="text/javascript"></script>
     <script src="/Scripts/knockout-1.3.0beta.debug.js" type="text/javascript"></script>
+    <script src="/Scripts/cog.javascript.js" type="text/javascript"></script>
     <script src="/Scripts/knockout.mapping-latest.debug.js" type="text/javascript"></script>
     <script src="/Scripts/DataTables-1.8.2/media/js/jquery.dataTables.js" type="text/javascript"></script>
 }
