--- a/Demo/Knockout.Extensions.Demo.Web/Views/Shared/_Layout.cshtml
+++ b/Demo/Knockout.Extensions.Demo.Web/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/json2.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/cog.javascript.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/knockout-1.3.0beta.debug.js")" type="text/javascript"></script>
