Slight fix to copy in Index.cshtml.

--- a/Demo/Knockout.Extensions.Demo.Web/Views/BindingsDemo/Index.cshtml
+++ b/Demo/Knockout.Extensions.Demo.Web/Views/BindingsDemo/Index.cshtml
@@ -193,7 +193,7 @@
 </script>
 
 
-<!-- Sample 2: Editable Data Table with Row Template -->
+<!-- Sample 3: Editable Data Table with Row Template and AJAX data source -->
 <div Id="sample3" class="sample">
     <h1> Sample 3: Editable Data Table with Row Template and AJAX data source</h1>
     <p class="description">
