--- a/Demo/Knockout.Extensions.Demo.Web/Views/Shared/_Layout.cshtml
+++ b/Demo/Knockout.Extensions.Demo.Web/Views/Shared/_Layout.cshtml
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/demo.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/json2.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/cog.javascript.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/cog.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/knockout-1.3.0beta.debug.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/knockout.mapping-latest.debug.js")" type="text/javascript"></script>
 </head>
@@ -22,7 +23,8 @@
             </div>
             <nav>
                 <ul id="menu">
-                    <li>@Html.ActionLink("Bindings Demo", "Index", "BindingsDemo")</li>
+                    <li>@Html.ActionLink("Data Tables", "DataTables", "Demo")</li>
+                    <li>@Html.ActionLink("Check & Radio List", "CheckRadioList", "Demo")</li>
                 </ul>
             </nav>
         </header>
