--- a/Demo/Knockout.Extensions.Demo.Web/Views/Demo/CheckRadioList.cshtml
+++ b/Demo/Knockout.Extensions.Demo.Web/Views/Demo/CheckRadioList.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "CheckRadioList";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<script src='@Url.Content("~/Scripts/ko.bindings.radiochecklist.js")' type="text/javascript"></script>
+<script src='@Url.Content("~/Scripts/knockout.bindings.radiochecklist.js")' type="text/javascript"></script>
 <style type="text/css">
     
     .cog-radiolist, .cog-checklist
