--- a/Demo/Knockout.Extensions.Demo.Web/Views/Demo/DataTables.cshtml
+++ b/Demo/Knockout.Extensions.Demo.Web/Views/Demo/DataTables.cshtml
@@ -4,7 +4,7 @@
 }
 <link href="/Content/DataTables-1.8.2/media/css/demo_table_jui.css" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/DataTables-1.8.2/media/js/jquery.dataTables.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/ko.bindings.dataTables.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/knockout.bindings.dataTables.js")" type="text/javascript"></script>
 <style type="text/css">
 
 .sample .table, .sample table
