--- a/Demo/Knockout.Extensions.Demo.Web/Views/Shared/_Layout.cshtml
+++ b/Demo/Knockout.Extensions.Demo.Web/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/cog.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/cog.utils.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/knockout-1.3.0beta.debug.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/knockout-2.1.0.debug.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/knockout.mapping-latest.debug.js")" type="text/javascript"></script>
 </head>
 <body>
