--- a/Demo/Knockout.Extensions.Demo.Web/Views/Demo/DataTables.cshtml
+++ b/Demo/Knockout.Extensions.Demo.Web/Views/Demo/DataTables.cshtml
@@ -58,6 +58,11 @@
             });
         }
 
+        this.refreshAjax = function () {
+            var table = ko.bindingHandlers.dataTable.getDataTableInstance($("#sample3 table")[0]);
+            table.fnDraw();
+        }
+
         // Demonstrates the ability to post process rows rendered by DataTables so you can add your own effects.
         this.onRowCallback = function (row, data, displayIndex, displayIndexFull) {
 
@@ -232,6 +237,7 @@
         @*<a data-bind="click: addItem">Add</a>*@
         <br /><br />
         <a data-bind="click: toggleEdit">Toggle Edit</a>
+        <a data-bind="click: refreshAjax">Refresh Table</a>
         <table data-bind="dataTable: { 
             dataSource: getData, 
             rowTemplate: 'sample3RowTemplate', 
@@ -291,8 +297,8 @@
 {
     <script src="/Scripts/jquery-1.5.1.min.js" type="text/javascript"></script>
     <script src="/Scripts/modernizr-1.7.min.js" type="text/javascript"></script>
-    <script src="/Scripts/knockout-1.3.0beta.debug.js" type="text/javascript"></script>
-    <script src="/Scripts/cog.javascript.js" type="text/javascript"></script>
+    <script src="/Scripts/knockout-2.1.0.debug.js" type="text/javascript"></script>
     <script src="/Scripts/knockout.mapping-latest.debug.js" type="text/javascript"></script>
+    <script src="/Scripts/knockout.bindings.dataTables.js" type="text/javascript"></script>
     <script src="/Scripts/DataTables-1.8.2/media/js/jquery.dataTables.js" type="text/javascript"></script>
 }
